# Cpp_revisit

./: .gitignore  CMakeLists.txt  README.md
Templates/: CMakeLists.txt
Templates/includes/: Template.hpp
Templates/src/: main.cpp
designPatterns/BehavioralDesignPatterns/StrategyDesignPattern/: CMakeLists.txt  README.md
designPatterns/BehavioralDesignPatterns/StrategyDesignPattern/src/: main.cpp
designPatterns/BehavioralDesignPatterns/TemplateMethodDesignPattern/: CMakeLists.txt  README.md
designPatterns/BehavioralDesignPatterns/TemplateMethodDesignPattern/src/: main.cpp
designPatterns/StructuralDesignPatterns/bridgePattern/: CMakeLists.txt  README.md
designPatterns/StructuralDesignPatterns/bridgePattern/include/: Person.h
designPatterns/StructuralDesignPatterns/bridgePattern/src/: main.cpp
designPatterns/StructuralDesignPatterns/builderPattern/: CMakeLists.txt  README.md
designPatterns/StructuralDesignPatterns/builderPattern/include/: Foo.h  Person.h  pimpl.hpp
designPatterns/StructuralDesignPatterns/builderPattern/src/: Foo.cpp  Person.cpp  main.cpp
designPatterns/StructuralDesignPatterns/compositePattern/: CMakeLists.txt  README.md
designPatterns/StructuralDesignPatterns/compositePattern/src/: main.cpp
designPatterns/StructuralDesignPatterns/decoratorPattern/: CMakeLists.txt  README.md
designPatterns/StructuralDesignPatterns/decoratorPattern/include/: decorator.hpp
designPatterns/StructuralDesignPatterns/decoratorPattern/src/: main.cpp
designPatterns/StructuralDesignPatterns/facadePattern/: README.md
